scraper_service/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-service-app-web
  namespace: scraper-service-app
spec:
  selector:
    app: scraper-service-app
    role: web
  ports:
    - name: http
      port: 80
      targetPort: gunicorn
