scraper_service/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-service-app-web
  namespace: scraper-service-app
spec:
  rules:
    - host: scraper-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scraper-service-app-web
                port: 
                  number: 8000
